# LeetGPU-Guidebook

./: .gitignore  CONTRIBUTING.md  README.md
docs/cuda-best-practices/: README.md
docs/cuda-best-practices/experiments/: L2_window.cu  README.md  async_copy_shared.cu  branch_scheduler.cu  cpu_gpu_timers.cu  gemm.cu  instruction_optimization.cu  multi_stream_overlap.cu  occupancy_sweep.cu  offset_stride_copy.cu  pinned_pageable_cp.cu  render_branch_scheduler_plots.py  render_occupancy_sweep_plots.py  render_principle_diagrams.py
docs/superpowers/plans/: 2026-05-10-cuda-practice-extensions.md  2026-05-10-cuda-practice-workspace.md  2026-05-13-cuda-practice-parallel-ops.md  2026-05-13-cuda-practice-real-ops.md
docs/superpowers/specs/: 2026-05-10-cuda-practice-design.md  2026-05-10-cuda-practice-extensions-design.md  2026-05-13-cuda-practice-parallel-ops-design.md  2026-05-13-cuda-practice-real-ops-design.md
practice/: CMakeLists.txt  README.md
practice/00-sanity-check/: README.md  cuda_sanity.cu
practice/01-vector-add/: README.md  exercise.cu
practice/02-matrix-copy/: README.md  exercise.cu
practice/03-matrix-transpose/: README.md  exercise.cu
practice/04-reduction/: README.md  exercise.cu
practice/05-softmax/: README.md  exercise.cu
practice/06-rmsnorm/: README.md  exercise.cu
practice/07-gelu/: README.md  exercise.cu
practice/08-rope/: README.md  exercise.cu
practice/09-optimized-reduction/: README.md  exercise.cu
practice/10-tiled-transpose/: README.md  exercise.cu
practice/11-saxpy/: README.md  exercise.cu
practice/12-layernorm/: README.md  exercise.cu
practice/13-vector-dot/: README.md  exercise.cu
practice/14-histogram/: README.md  exercise.cu
practice/15-embedding-lookup/: README.md  exercise.cu
practice/16-prefix-sum/: README.md  exercise.cu
practice/17-matrix-vector/: README.md  exercise.cu
practice/18-tiled-matmul/: README.md  exercise.cu
practice/19-conv2d/: README.md  exercise.cu
practice/20-max-pooling/: README.md  exercise.cu
practice/common/: cuda_check.h  timer.h  validation.h
solutions/normalization/: batch-normalization.cu  rms-normalization.cu
solutions/quantization/: int8-quantized-matmul.cu  weight-dequantization.cu
solutions/reduction/: dot-product.cu  parallel-merge.cu
solutions/transformer/: gpt-2-transformer-block.cu  rotary-positional-embedding.cu
(+1 files in other folders)
